# image-processing

./: CMakeLists.txt  README.md  bresenham-circle.cpp  bresenham.cpp  compile.sh  dda-line.cpp  main.cpp  midpoint-circle.cpp
src/: calculator.cpp
